# mlet-grupo4-tech-challenge

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci_ml_pipeline.yml
data/raw/: telecom_churn_base.csv
docs/: API.md  Modificacoes2.docx  PROMETHEUS_SETUP.md  baseline_metodologia.md  eda_metodologia.md  fase1_doc_tecnica.md  ml_canvas.md  model_card.md  monitoring_plan.md
docs/decisions/: 001-logreg-como-modelo-servido.md  002-threshold-por-valor-liquido.md  003-arquitetura-mlp-128-64.md  004-fairness-equalized-odds.md  005-batch-scoring-como-modo-primario.md  README.md
docs/superpowers/specs/: 2026-04-16-model-registry-design.md
examples/: prometheus.yml
grafana-prometheus/grafana/dashboards/: churn-api.json  model-health.json
grafana-prometheus/prometheus/: prometheus.yml
infra/: .dockerignore.train  Dockerfile.prod  Dockerfile.train  deploy.sh  template.yaml
models/: champion_metadata.json
notebooks/: 01_eda.ipynb  02_baselines.ipynb  03_mlp_pytorch.ipynb
scripts/: analyze_mlruns.py  check_drift.py  export_model.py  generate_dataset.py  generate_synthetic.py  logging_utils.py  simulate_drift.py  train_remote.py
src/churn_prediction/: __init__.py  config.py  data_cleaning.py  evaluation.py  explainability.py  mlflow_utils.py  model.py  monitoring.py  preprocessing.py  registry.py
tests/: test_api.py  test_calibration.py  test_evaluation_ci.py  test_explainability.py  test_mlflow_utils.py  test_prometheus_metrics.py  test_registry.py  test_schema.py  test_smoke.py
tests/api/: __init__.py  test_drift_endpoints.py  test_feedback_endpoints.py  test_integration.py  test_model_endpoints.py
(+23 files in other folders)
