[tool.poetry]
name = "my_project"
version = "0.1.0"
description = "A Python project"

[tool.poetry.dependencies]
pandas = "^1.3.0"
numpy = "^1.21.0"
scikit-learn = "^1.0.0"
mlflow = "^1.20.0"
torch = "^1.10.0"
fastapi = "^0.68.0"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ruff = "^0.0.0"
black = "^21.12.0"
pytest-cov = "^2.12.0"

[tool.ruff]
line-length = 88
exclude = ["__init__.py"]

[tool.pytest]
addopts = "--maxfail=5 --disable-warnings"