[tool.poetry]
name = "mlet-grupo4-tech-challenge"
version = "0.1.0"
description = "Rede Neural (MLP) para Previsão de Churn em Telecom - Tech Challenge"
authors = ["Grupo 4"]
readme = "README.md"
packages = [{ include = "churn_prediction", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
pandas = "^2.2.0"
scikit-learn = "^1.5.0"
torch = "^2.3.0"
mlflow = "^2.14.0"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.8.0"
pyyaml = "^6.0.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.0"
ipykernel = "^6.29.0"
jupyter = "^1.1.0"

[tool.poetry.scripts]
lint = "ruff:main"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  ".venv",
  "mlruns",
  "data",
  "models",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"